--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "cli-progress": "^3.12.0",
     "dotenv": "^17.2.3",
     "fetch-socks": "^1.3.2",
