--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@commander-js/extra-typings": "^14.0.0",
     "async-mutex": "^0.5.0",
     "cli-progress": "^3.12.0",
+    "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "fetch-socks": "^1.3.2",
+    "roaring": "^2.7.0",
+    "xmlbuilder2": "^4.0.3",
+    "yazl": "^3.3.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^25.0.6",
+    "@types/yazl": "^3.3.0",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
