--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/main.js",
-    "dev": "tsx src/main.ts",
+    "dev:bin": "tsx src/bin.ts",
     "test": "vitest",
     "test:run": "vitest run"
   },
@@ -18,12 +18,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@commander-js/extra-typings": "^14.0.0",
+    "@oclif/core": "^4.8.0",
     "async-mutex": "^0.5.0",
+    "boxen": "^8.0.1",
+    "chalk": "^5.6.2",
     "cli-progress": "^3.12.0",
     "cron": "^4.4.0",
     "dotenv": "^17.2.3",
     "fetch-socks": "^1.3.2",
+    "log-symbols": "^7.0.1",
     "roaring": "^2.7.0",
     "xmlbuilder2": "^4.0.3",
     "yazl": "^3.3.1",
