--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "hentai-downloader",
   "version": "1.0.0",
   "description": "downloader",
-  "main": "dist/main.js",
+  "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/main.js",
-    "dev:bin": "tsx src/bin.ts",
-    "dev:scheduler": "tsx src/scheduler.ts",
+    "build": "shx rm -rf dist && tsc -b",
+    "start": "node ./bin/run.js",
+    "dev": "node ./bin/dev.js",
     "test": "vitest",
     "test:run": "vitest run"
   },
@@ -16,10 +15,30 @@
     "downloader",
     "hitomi"
   ],
-  "author": "",
-  "license": "ISC",
+  "oclif": {
+    "bin": "hentai-downloader",
+    "dirname": "hentai-downloader",
+    "commands": "./dist/commands",
+    "plugins": [
+      "@oclif/plugin-help",
+      "@oclif/plugin-plugins"
+    ],
+    "topicSeparator": " ",
+    "topics": {
+      "hello": {
+        "description": "Say hello to the world and others"
+      }
+    }
+  },
+  "bin": {
+    "hentai-downloader": "./bin/run.js"
+  },
+  "author": "fa0311",
+  "license": "MIT",
   "dependencies": {
     "@oclif/core": "^4.8.0",
+    "@oclif/plugin-help": "^6.2.36",
+    "@oclif/plugin-plugins": "^5.4.54",
     "async-mutex": "^0.5.0",
     "boxen": "^8.0.1",
     "chalk": "^5.6.2",
@@ -29,8 +48,12 @@
     "dotenv": "^17.2.3",
     "error-stack-parser": "^2.1.4",
     "fetch-socks": "^1.3.2",
+    "jsonc-parser": "^3.3.1",
     "log-symbols": "^7.0.1",
+    "pino": "^10.2.0",
+    "pino-pretty": "^13.1.3",
     "roaring": "^2.7.0",
+    "shx": "^0.4.0",
     "string-width": "^8.1.0",
     "xmlbuilder2": "^4.0.3",
     "yazl": "^3.3.1",
@@ -41,6 +64,8 @@
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^25.0.6",
     "@types/yazl": "^3.3.0",
+    "oclif": "^4.22.65",
+    "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.17"
