--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,8 @@
 services:
-  downloader:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: downloader:latest
-    container_name: downloader
-    # restart: unless-stopped
-
-    environment:
-      # SOCKS
-      SOCKS_TYPE: ${SOCKS_TYPE:-}
-      SOCKS_HOST: ${SOCKS_HOST:-}
-      SOCKS_PORT: ${SOCKS_PORT:-}
-      SOCKS_USER: ${SOCKS_USER:-}
-      SOCKS_PASSWORD: ${SOCKS_PASSWORD:-}
-
-      # Output / Download
-      OUTPUT_TYPE: ${OUTPUT_TYPE:-}
-      OUTPUT_PATH: ${OUTPUT_PATH:-/outputs}
-      DOWNLOAD_PATH: ${DOWNLOAD_PATH:-/downloads}
-      AUTO_CLEAN_DOWNLOAD: ${AUTO_CLEAN_DOWNLOAD:-true}
-      SKIP_VIDEO: ${SKIP_VIDEO:-true}
-
+  hentai-downloader:
+    image: ghcr.io/fa0311/hentai-downloader:latest-scheduler
+    container_name: hentai-downloader
     volumes:
-      - ./outputs:/outputs
-      - ./downloads:/downloads
+      - ./input.json:/app/input.json
+      - ./output:/app/output
+      - ./.checkpoint:/app/.checkpoint
