--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node ./bin/run.js",
     "dev": "node ./bin/dev.js",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "test:unit": "vitest run --config vitest.config.ts",
+    "test:integration": "vitest run --config vitest.integration.config.ts"
   },
   "keywords": [
     "downloader",
@@ -58,15 +60,19 @@
     "pino-pretty": "^13.1.3",
     "roaring": "^2.7.0",
     "shx": "^0.4.0",
+    "source-map-support": "^0.5.21",
     "string-width": "^8.1.0",
     "xmlbuilder2": "^4.0.3",
+    "yauzl": "^3.2.0",
     "yazl": "^3.3.1",
     "zod": "^4.3.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
+    "@oclif/test": "^4.1.15",
     "@types/cli-progress": "^3.11.6",
     "@types/node": "^25.0.6",
+    "@types/yauzl": "^2.10.3",
     "@types/yazl": "^3.3.0",
     "oclif": "^4.22.65",
     "ts-node": "^10.9.2",
